2007-12-15  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-commands.c:
	Make links in about dialog clickable. Closes #503770
	Thanks to Jaap A. Haitsma for the patch.

2007-12-14  Jonh Wendell <jwendell@gnome.org>
	Small adjusts in .desktop files. Closes #503650

2007-12-13  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-window.c (create_menu_bar_and_toolbar):
	Flag some toolbar buttons as "important". Closes #503468

2007-12-13  Jonh Wendell <jwendell@gnome.org>
	* configure.ac: Dropped -Wall, fix suncc compile, closes #503358
	  Thanks to Halton Huo.

==================== 0.3 ====================

2007-12-12  Jonh Wendell <jwendell@gnome.org>
	pre-release bump version to 0.4

2007-11-11  Jonh Wendell <jwendell@gnome.org>

	Vinagre has its own icon!
	Thanks to Vinicius Depizzol for the artwork and Michael Monreal for
	the integration patch. Closes #489145.
	
	* configure.ac,
	* data/Makefile.am: Changed some rules
	* data/icons: THE new directory
	* src/vinagre-commands.c: Put vdepizzol's name under credits

2007-11-07  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-utils.[ch],
	* src/vinagre-main.c,
	* src/vinagre-connection.[ch],
	* src/vinagre-commands.c: Improved error handling

2007-11-07  Jonh Wendell <jwendell@gnome.org>

	More hack on .vnc file format support:
	
	* data/vinagre-ui.xml,
	* src/vinagre-commands.[ch],
	* src/vinagre-ui.h: Added an "Open .VNC file" menu item.

2007-11-06  Jonh Wendell <jwendell@gnome.org>

	Initial support to load .vnc files:

	* configure.ac: Added gnome-vfs as a dependency
	* src/vinagre-tab.c: Use "x-remote-connection" in recent connection
	* src/vinagre-main.c: Parse filenames as parameters ("-f" command line flag)
	* src/vinagre-connection.[ch]: vinagre_connection_new_from_file (): new function

2007-10-21  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c,
	* src/vinagre-window.c,
	* src/vinagre-window.h,
	* src/vinagre-notebook.c,
	* src/vinagre-window-private.h: