@@ -1,0 +1,194 @@
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.3//EN"
+    "http://www.oasis-open.org/docbook/xml/4.3/docbookx.dtd" [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY GFDL  SYSTEM "fdl-appendix.xml">
+  <!ENTITY app "Vinagre">
+  <!ENTITY application "<application>&app;</application>">
+  <!ENTITY appversion "0.4">
+  <!ENTITY manrevision "0.4">
+]>
+<!--
+      (Do not remove this comment block.)
+  Template Maintained by the GNOME Documentation Project:
+	  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+
+<!-- =============Document Header ============================= -->
+<article id="index" lang="en">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
+
+  <articleinfo>
+    <title>&application; Manual</title>
+    <abstract role="description">
+      <para>
+        &application; is a Remote Desktop Viewer
+      </para>
+    </abstract>
+    <copyright>
+      <year>2007</year>
+      <holder>Jonh Wendell (wendell@bani.com.br)</holder>
+    </copyright>
+
+  <!-- translators: uncomment this:
+
+  <copyright>
+   <year>2006</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+  -->
+
+<!-- An address can be added to the publisher information.  If a role is
+     not specified, the publisher/author is the same for all versions of the
+     document.  -->
+    <publisher role="maintainer">
+      <publishername>Jonh Wendell</publishername>
+    </publisher>
+
+   &legal;
+   <!-- This file  contains link to license for the documentation (GNU FDL), and
+        other legal stuff such as "NO WARRANTY" statement. Please do not change
+        any of this. -->
+
+    <authorgroup>
+      <author role="maintainer">
+        <firstname>Jonh</firstname>
+        <surname>Wendell</surname>
+	<email>wendell@bani.com.br</email>
+      </author>
+
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+        <firstname>Latin</firstname>
+        <surname>Translator 1</surname>
+        <affiliation>
+          <orgname>Latin Translation Team</orgname>
+          <address> <email>translator@gnome.org</email> </address>
+        </affiliation>
+        <contrib>Latin translation</contrib>
+      </othercredit>
+-->
+    </authorgroup>
+
+    <revhistory>
+      <revision>
+        <revnumber>0.1</revnumber>
+        <date>2007-12-16</date>
+        <revdescription>
+          <para role="author">Jaap A. Haitsma
+            <email>jaap@haitsma.org</email>
+          </para>
+          <para role="publisher">Jaap A. Haitsma</para>
+        </revdescription>
+      </revision>
+    </revhistory>
+
+    <legalnotice>
+      <title>Feedback</title>
+      <para>
+        To report a bug or make a suggestion regarding the &app; application or
+        this manual, follow the directions in the 
+        <ulink url="http://www.gnome.org/projects/vinagre/"
+	  type="http">&application; Contact Page</ulink>.
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+    </legalnotice>
+  </articleinfo>
+
+  <indexterm zone="index">
+    <primary>&application;</primary>
+  </indexterm>
+  <indexterm zone="index">
+    <primary>vinagre</primary>
+  </indexterm>
+
+<!-- ============= Document Body ============================= -->
+<!-- ============= Introduction ============================== -->
+<section id="intro">
+  <title>Introduction</title>
+  <!-- manrevision 2.0 compatibility -->
+  <anchor id="aboutex"/>
+  <anchor id="notice"/>
+  <indexterm>
+    <primary>&application;</primary>
+    <secondary>Manual</secondary>
+    <tertiary>vinagre</tertiary>
+  </indexterm>
+
+  <para>
+  &app; is remote desktop viewer for the <systemitem>GNOME desktop</systemitem>
+  </para>
+
+</section>
+
+<section id="using">
+  <title>Usage</title>
+  <para>
+  Describe usage overhere
+  </para>
+
+  <figure>
+  <title>&app; screenshot</title>
+    <screenshot>
+      <mediaobject>
+        <imageobject>
+          <imagedata fileref="figures/vinagre-screenshot.png" format="PNG"/>
+        </imageobject>
+      </mediaobject>
+    </screenshot>
+  </figure>
+
+
+  <para>
+  Describe usage here
+  </para>
+</section>
+
+<section id="preferences">
+  <title>Preferences</title>
+
+  <para>
+    Describe preferences overhere
+  </para>
+
+
+</section>
+
+
+
+<section id="faq">
+  <title>Frequently Asked Questions</title>
+  <para>
+    Describe FAQ overhere
+  </para>
+</section>
+
+<section id="about">
+  <title>About</title>
+  <para>
+    &app; was written by Jonh Wendell <email>wendell@bani.com.br</email>.
+    To find more information about &app;, please visit the
+    <ulink url="http://www.gnome.org/projects/vinagre" type="http">
+    &application; web page</ulink>.
+  </para>
+  <para>
+    To report a bug or make a suggestion regarding this application you can file
+    a bug in our 
+    <ulink url="http://bugzilla.gnome.org/browse.cgi?product=vinagre" type="http">
+    bug tracker</ulink>.
+  </para>
+  <para>This program is distributed under the terms of the GNU
+    General Public license as published by the Free Software
+    Foundation; either version 2 of the License, or (at your option)
+    any later version. A copy of this license can be found at the
+    <ulink url="http://www.gnu.org/licenses/gpl.html" type="http">GNU site</ulink>, or in the file
+    COPYING included with the source code of this program.
+  </para>
+</section>
+
+</article>
