@@ -1,0 +1,12 @@
+include $(top_srcdir)/gnome-doc-utils.make
+dist-hook: doc-dist-hook
+
+DOC_MODULE = vinagre
+DOC_ENTITIES = legal.xml
+DOC_INCLUDES = 
+
+DOC_FIGURES = \
+	figures/vinagre-screenshot.png 
+
+DOC_LINGUAS =
+
