@@ -1,3 +1,8 @@
+2007-12-19  Jonh Wendell <jwendell@gnome.org>
+
+	* lots of files: Initial documentation skeleton, patch from Jaap A. Haitsma,
+	  important step to fix bug #503806.
+
 2007-12-15  Jonh Wendell <jwendell@gnome.org>
 	* src/vinagre-commands.c:
 	Make links in about dialog clickable. Closes #503770
